perhaps the problem is homepage; edited

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ckn00b.github.io",
+  "homepage": "https://ckn00b.github.io/public/index.html",
   "name": "ckn00b.github.io",
   "version": "0.1.0",
   "private": true,
